tests/expectations/compiler/core/algorithms/integers/pedersen64/pedersen64_hash_to_u16.out
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:28:22
     |
  28 |         let a: u16 = Pedersen64::hash_to_u16(bool_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:29:22
     |
  29 |         let b: u16 = Pedersen64::hash_to_u16(bool_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:30:22
     |
  30 |         let c: u16 = Pedersen64::hash_to_u16(bool_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:31:22
     |
  31 |         let d: u16 = Pedersen64::hash_to_u16(bool_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:32:22
     |
  32 |         let e: u16 = Pedersen64::hash_to_u16(i8_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:33:22
     |
  33 |         let f: u16 = Pedersen64::hash_to_u16(i16_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:34:22
     |
  34 |         let g: u16 = Pedersen64::hash_to_u16(i32_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:35:22
     |
  35 |         let j: u16 = Pedersen64::hash_to_u16(u8_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:36:22
     |
  36 |         let k: u16 = Pedersen64::hash_to_u16(u16_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:37:22
     |
  37 |         let l: u16 = Pedersen64::hash_to_u16(u32_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:38:22
     |
  38 |         let o: u16 = Pedersen64::hash_to_u16(bool_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:40:22
     |
  40 |         let q: u16 = Pedersen64::hash_to_u16(bool_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
